Fix button overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,5 @@ footer {
   text-align: right;
 }
 
-#click-element {
-  position: relative;
-}
+
 
